[package]
name = "tcp-leak"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-rt = "2.3.0"
actix-http= "3.0.0-beta.10"
actix-web = {version="4.0.0-beta.9", features=["rustls"]}
actix-server = "2.0.0-beta.6"
actix-service = "2.0.1"
tokio = "1"
rustls = "0.19.1"
openssl = {version = "0.10.36", features=["vendored"]}
futures-util = "0.3.17"