[package]
name = "tcp-leak"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.13.0"
actix-rt = "2.3.0"
actix-http= "3.2.1"
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
actix-server = "2.1.1"
actix-service = "2.0.1"
tokio = {version = "1", features=["rt-multi-thread"]}
libc = "0.2.103"
http = "0.2.5"
websocket = {version = "0.26.2", default-features=false, features=["sync"]}
lazy_static = "1.4.0"